# udacity-home-service-robot

./: README.md
add_markers/: CMakeLists.txt  package.xml
add_markers/msg/: Action.msg  action.msg
add_markers/src/: AddMarker.cpp  AddMarker.h  AddMarkerSubscriber.cpp  add_markers.cpp  add_markers_node.cpp  add_markers_node.h
basketbot/launch/: view_navigation.launch  world.launch
basketbot/rviz/: basketbot.rviz  navigation.rviz
basketbot/world/: RoboWorld2.world
home_service/: CMakeLists.txt  package.xml
home_service/src/: home_service.cpp
marker_manager/: CMakeLists.txt  package.xml
marker_manager/msg/: action.msg
marker_manager/src/: marker_manager.cpp  marker_manager.h  marker_manager_node.cpp  marker_manager_node.h
pick_objects/: CMakeLists.txt
pick_objects/src/: pick_objects_node.1.cpp  pick_objects_node.cpp
scripts/: add_marker.sh  home_service.sh  install_pkgs.sh  local_nav_test.sh  pick_objects.sh  pick_objects_turtlebot.sh  test_slam.sh
